# gif_flipping

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
docs/: GIF89A.TXT.mhtml  my_note.txt  workflow.md
src/: config.h  gif_parse.cpp  gif_parse.h  gif_reverse.cpp  gif_reverse.h  gifdump.cpp
